Bug 487640 - In Edit Mode, Panel Settings dialog overlaps settings popups for widgets on the panel
Summary: In Edit Mode, Panel Settings dialog overlaps settings popups for widgets on t...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: git-stable-Plasma/6.1
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 487722 487961 488788 488796 488835 488836 489473 490188 490223 490238 490658 490913 491057 491101 491232 491400 491416 492035 492853 492986 494714 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-27 18:15 UTC by Chip
Modified: 2024-11-18 18:07 UTC (History)
31 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
Recording where I try to remove an element on the right side of my bottom panel (3.47 MB, video/mp4)
2024-05-27 18:15 UTC, Chip
Details
Editing the panel on Wayland (Buggy behaviour) (2.77 MB, video/x-matroska)
2024-07-13 12:24 UTC, elydgolden
Details
Editing the panel on X11 (Normal behaviour) (3.00 MB, video/x-matroska)
2024-07-13 12:24 UTC, elydgolden
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chip 2024-05-27 18:15:52 UTC
Created attachment 169885 [details]
Recording where I try to remove an element on the right side of my bottom panel

SUMMARY
When entering edit mode to remove an element from a panel, the Panel Settings window obscures the popup settings that appear when hovering over elements under it.

STEPS TO REPRODUCE
1. Enter edit mode
2. Focus on a panel
3. Try to remove elements that are below the panel settings window

OBSERVED RESULT
The remove button is behind the Panel Settings window

EXPECTED RESULT
These controls should be on the layer above the Panel Settings window.

SOFTWARE/OS VERSIONS 
Linux: 6.9.2
KDE Plasma Version: 6.1 Beta (6.0.90)
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Comment 1 Bug Janitor Service 2024-05-28 09:03:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2273
Comment 2 Bug Janitor Service 2024-05-28 11:43:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4361
Comment 3 David Edmundson 2024-05-29 06:12:47 UTC
Git commit a6886a3d1af88682e966d73fbb6c0b1f019b4b41 by David Edmundson.
Committed on 29/05/2024 at 05:43.
Pushed by davidedmundson into branch 'master'.

shell: Don't set panelconfigview as an applet for stacking order purposes

This was added as a wokaround for the case of overlapping other panels.

As well as being semantically not entirley correct, it also causes
issues with stacking order as other popups from the panel that should be
on top of this window.

M  +0    -6    shell/panelconfigview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/a6886a3d1af88682e966d73fbb6c0b1f019b4b41
Comment 4 David Redondo 2024-05-29 07:12:14 UTC
*** Bug 487722 has been marked as a duplicate of this bug. ***
Comment 5 David Redondo 2024-06-04 10:19:48 UTC
*** Bug 487961 has been marked as a duplicate of this bug. ***
Comment 6 sajito+kde 2024-06-28 06:03:47 UTC
This is marked as fixed in 6.1.0, but I'm having this exact same issue on 6.1.1.
Is there anything I need for the fix to work?


Software Information:

Operating System: EndeavourOS 
KDE Plasma Version: 6.1.1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.6-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8665U CPU @ 1.90GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20N3SEYC00
System Version: ThinkPad T490
Comment 7 Nate Graham 2024-06-28 14:52:28 UTC
Indeed, re-opening.
Comment 8 Nate Graham 2024-06-28 14:53:25 UTC
*** Bug 488836 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2024-06-28 14:53:36 UTC
*** Bug 488835 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2024-06-28 14:53:42 UTC
*** Bug 488796 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2024-06-28 14:53:50 UTC
*** Bug 488788 has been marked as a duplicate of this bug. ***
Comment 12 Niccolò Venerandi 2024-06-28 18:26:08 UTC
Git commit ba91ef4124300e881b2ebe3e937b5dfb3a36aa98 by Niccolò Venerandi.
Committed on 28/06/2024 at 18:26.
Pushed by niccolove into branch 'master'.

Make panel config tooltips ask for focus after each applet change

If the tooltip loses focus, e.g. due to an applet being triggered,
then they might appear hidden underneath other windows. By asking
for focus whenever they change the applet, i.e. whenever the user
hovers a different applet, we ensure that they're always on top.
FIXED-IN: 6.1.2

M  +1    -0    containments/panel/contents/ui/ConfigOverlay.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/ba91ef4124300e881b2ebe3e937b5dfb3a36aa98
Comment 13 Niccolò Venerandi 2024-06-28 18:26:25 UTC
Git commit aad5814e70f42f4a44c42ec23ca6e921c6e739e6 by Niccolò Venerandi.
Committed on 28/06/2024 at 18:26.
Pushed by niccolove into branch 'Plasma/6.1'.

Make panel config tooltips ask for focus after each applet change

If the tooltip loses focus, e.g. due to an applet being triggered,
then they might appear hidden underneath other windows. By asking
for focus whenever they change the applet, i.e. whenever the user
hovers a different applet, we ensure that they're always on top.
FIXED-IN: 6.1.2


(cherry picked from commit ba91ef4124300e881b2ebe3e937b5dfb3a36aa98)

0a82a374 Make panel config tooltips ask for focus after each applet change

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +1    -0    containments/panel/contents/ui/ConfigOverlay.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/aad5814e70f42f4a44c42ec23ca6e921c6e739e6
Comment 14 Filip 2024-06-30 12:12:33 UTC
*** Bug 489473 has been marked as a duplicate of this bug. ***
Comment 15 prinon 2024-07-04 20:01:55 UTC
on arch linux running 6.1.2 the bug is still there. I deleted my previous panel and added a new default penal and the issue is still there.
Comment 16 sajito+kde 2024-07-04 20:40:29 UTC
Same here. Running 6.1.2, created a fresh user, issue still exists.
Also can still reproduce when booting the kde neon live iso (neon-user-20240704-0716.iso).
Comment 17 cwo 2024-07-05 06:23:06 UTC
I can confirm the issue still happens on neon-user-20240704-0716.iso (6.1.2). It does not seem to happen on neon-unstable-20240701-1605.iso (Plasma 6.1.80). Both tested in a vm (qemu), my bare metal testing setup is out of order right now. 

If it happens, no special steps are needed - just boot, close the Welcome Center, click the panel, "Show Panel Configuration", hove over the tray. I didn't try hard to find ways to get it to trigger if it doesn't immediately, as the bug is about it happening in regular operation..

Seems like either the fix depends on some non-backported change, or there is some other issue there that emerges in non-trivial ways.

Reopening as there have been three reports of this still happening on 6.1.2 .
Comment 18 cwo 2024-07-12 20:01:01 UTC
*** Bug 490188 has been marked as a duplicate of this bug. ***
Comment 19 Filip 2024-07-13 12:14:53 UTC
*** Bug 490223 has been marked as a duplicate of this bug. ***
Comment 20 elydgolden 2024-07-13 12:20:53 UTC
Can confirm on openSUSE Tumbleweed 20240711. Only on Wayland, not on X11
Comment 21 elydgolden 2024-07-13 12:24:19 UTC
Created attachment 171631 [details]
Editing the panel on Wayland (Buggy behaviour)
Comment 22 elydgolden 2024-07-13 12:24:46 UTC
Created attachment 171632 [details]
Editing the panel on X11 (Normal behaviour)
Comment 23 cwo 2024-07-13 19:59:36 UTC
*** Bug 490238 has been marked as a duplicate of this bug. ***
Comment 24 Nate Graham 2024-07-18 19:10:40 UTC
If it's still happening for folks on released software but not Neon Unstable or compiled from git master (as for me), then it looks like whatever fixed this is actually in Plasma 6.2. not 6.1.
Comment 25 Filip 2024-07-22 18:03:02 UTC
*** Bug 490658 has been marked as a duplicate of this bug. ***
Comment 26 Filip 2024-07-28 07:41:16 UTC
*** Bug 490913 has been marked as a duplicate of this bug. ***
Comment 27 cwo 2024-07-31 13:44:54 UTC
*** Bug 491057 has been marked as a duplicate of this bug. ***
Comment 28 Ilya Zverev 2024-08-01 08:22:15 UTC
*** Bug 491101 has been marked as a duplicate of this bug. ***
Comment 29 Soumyadeep Ghosh 2024-08-03 06:24:17 UTC
Same problem here.
Comment 30 cwo 2024-08-03 22:46:05 UTC
*** Bug 491232 has been marked as a duplicate of this bug. ***
Comment 31 cwo 2024-08-07 18:11:02 UTC
*** Bug 491400 has been marked as a duplicate of this bug. ***
Comment 32 Filip 2024-08-08 06:12:25 UTC
*** Bug 491416 has been marked as a duplicate of this bug. ***
Comment 33 Nate Graham 2024-08-22 14:53:18 UTC
*** Bug 492035 has been marked as a duplicate of this bug. ***
Comment 34 Filip 2024-09-09 05:51:18 UTC
*** Bug 492853 has been marked as a duplicate of this bug. ***
Comment 35 cwo 2024-09-11 23:05:18 UTC
*** Bug 492986 has been marked as a duplicate of this bug. ***
Comment 36 henry 2024-09-25 01:32:26 UTC
I am quite glad to know this, also that this wont be a problem with Plasma 6.2.
On a positive note, others stumped by this behavior, should they look here they'll have a solution.
Comment 37 Filip 2024-11-18 18:07:59 UTC
*** Bug 494714 has been marked as a duplicate of this bug. ***