shell: Don't set panelconfigview as an applet for stacking order purposes

This was added as a wokaround for the case of overlapping other panels.

As well as being semantically not entirley correct, it also causes
issues with stacking order as other popups from the panel that should be
on top of this window.

BUG: 487640